# OpenGL

./: CMakeLists.txt  window.cpp
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: CMakeLists.txt
dependencies/glfw/src/: mappings.h
shaders/: fragment.glsl  vertex.glsl
src/: functions.h  window.cpp
